2009-07-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* tested with 2213 and 310
	* restructured configuration files, use new
	EtaPtMinCandViewRefSelector from JetUtilities
	

2009-05-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-01
	* add EtaRsp* as a function of eta AND pT
	* add PhiRsp* as a function of eta AND pT
	* make weighted jet spectrum color schema prettier

2009-05-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-00
	* add ability to consider |eta|: if the lowest bound binseta[0]
	is>=0, eta is interpreted as |eta|
	* add eta- and phi- response to JetResponseAnalyzer and
	jet_response_analyzer_x
	* update histogram mode defaults

2009-04-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-05
	* add bin/weighted_spectrum_x and config/weighted_spectrum.config

2009-04-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-04
	* fix jet_response_fitter_x to work correctly with ROOT >5.18
	* allow response comparisons in jet_inspect_jra_histos_x
	* add parameter xsection to jet_response_analyyzer_x: if set >0.0,
	histogram entries will be weighted by xsection/tree->GetEntries()

2009-03-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-03
	* protect histgram filling against empty vectors binsEta_ and
	binsPhi_

2009-02-27  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-02
	* remove features not necessary/supported on CMSSW_2_2_4: pflow
	re-reconstruction, track-jet reconstruction, anti-kt &
	cambridge/aachen, etc.

2008-12-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-00
	* requires JetMETAnalysis/JetUtilities V00-01-00
	* replace HistogramLoader with ObjectLoader<TH1F> in all relevant
	binaries in /bin

2008-12-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-05