@@ -1,3 +1,9 @@
+2009-08-17 Philipp Schieferdecker <philipp.schieferdecker@cern.ch>
+
+	* tag V00-03-01
+	* add configuration for kt/ca with D=0.5/0.7
+	* add jet_response_and_resolution_x
+	
 2009-07-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-03-00
